--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Sometimes it is useful to serve up alternative 'shiny' UIs
     value of a cookie or a query parameter. This packages facilitates such
     switches.
 License: MIT + file LICENSE
-URL: https://scenes.shinyworks.org/scenes/,
+URL: https://scenes.shinyworks.org/,
     https://github.com/shinyworks/scenes
 BugReports: https://github.com/shinyworks/scenes/issues
 Imports: 
@@ -30,5 +30,6 @@ VignetteBuilder:
     knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.0
+RoxygenNote: 7.3.2
